unburden-home-dir (0.4.0.1) UNRELEASED; urgency=medium

  * Fix typos in man page.

 -- Axel Beckert <abe@debian.org>  Fri, 13 May 2016 03:41:25 +0200

unburden-home-dir (0.4) unstable; urgency=low

  New Features:

  * Set $XDG_CACHE_HOME to a subdirectory of unburden-home-dir's target.
    + Use sane tmpfs-based defaults for $XDG_CACHE_HOME in case
      unburden-home-dir is unconfigured.
  * Expand environment variables inside config files and list files.
    + Add (build-)dependency on libstring-expand-perl.
  * Don't set TARGETDIR in configuration file by default but compute a
    sane default value inside unburden-home-dir (Closes: #780387):
      - Use $TARGETDIR if set in the configuration file.
      - Else use $XDG_RUNTIME_DIR/$UID if it exists.
      - Else use /run/user/$UID if it exists.
      - Else use $TMPDIR if it exists.
      - Else use /tmp/.
    + Run test suite multiple times with different environments for
      coverage computation.
  * Also explicitly look for lsof in /usr/sbin to support odd Linux
    distributions which ship lsof outside a user's $PATH. Fixes GH#8.

  Bug fixes:

  * Always pass parameters to File::Rsync as array, not as hash
    reference. This is File::Rsync's preferred interface now and is even
    fully backwards compatible. Fixes test suite failures with File::Rsync
    0.46 (whose backward compatibility mode is buggy).
  * Support newer versions of lsof which additionally always output the
    used file descriptors. (Suppresses the "unexpected line" warnings.)

  Test suite enhancements:

  * Test::UBH always uses an environment variable for a part of the
    configuration file and hence tests the new feature mentioned above.
  * Skip tests which involve the non-readabliity of files if run as
    root. (Closes: #789832)
  * Catch some more cases of minor differences in output.
  * Fix race-condition in t/expand_environment_variables.t and
    t/moving-to-existing-subdir.t by enforcing older mtime.