@@ -1,1 +1,0 @@
-unburden-home-dir: package-contains-broken-symlink usr/share/doc/unburden-home-dir/html/fonts ../../../fonts-font-awesome/fonts
