@@ -3,3 +3,4 @@ Depends: @, @builddeps@
 
 Tests: adequate
 Depends: @, adequate
+Restrictions: needs-recommends
