@@ -1,0 +1,1 @@
+unburden-home-dir-doc: package-contains-broken-symlink usr/share/doc/unburden-home-dir/html/fonts ../../../fonts-font-awesome/fonts
